# NeatReel

./: NeatReel.py  README.md  README_CN.md  main.py  pyav_video_merger.py  pyproject.toml  qtquickcontrols2.conf
.github/workflows/: deploy-docs.yml
docs/: index.md
docs/.vitepress/: config.mts
docs/.vitepress/theme/: DocImage.vue  custom.css  index.ts
docs/about/: author.md
docs/features/: cover.md  crop.md  export.md  formats.md  preview.md  rotation.md
docs/guide/: build.md  faq.md  getting-started.md  introduction.md  system-requirements.md  workflow.md
docs/zh/: index.md
docs/zh/features/: export.md  formats.md  preview.md  rotation.md
docs/zh/guide/: faq.md  system-requirements.md
qml/: App.qml  ImagePath.qml  VideoMerger_i18n.pro  qmldir
qml/Components/: CoverSelecter.qml  DisplayScreen.qml  Loading.qml  VideoInfo.qml  qmldir
qml/Widgets/: Accordion.qml  DropableList.qml  FluentPane.qml  qmldir
qml/Windows/: About.qml  Crop.qml  Home.qml  Processing.qml
qml/i18n/: VideoMerger_en_US.ts  VideoMerger_zh_CN.ts
scripts/: build.py  change_version.py  compile.py  update_i18n.py
src/: merge_signals.py  progress_reporter.py
src/common/: app_settings.py  border_detector.py  language_manager.py  logging_setup.py  pyav_video_merger.py  single_instance_guard.py  startup_trace.py  video_detect.py  video_info_reader.py  video_merger.py
src/core/: paths.py  version.py
src/service/: about_service.py  home_service.py  image_provider.py  merge_signals.py  processing_service.py
src/utils/: singleton.py  window_utils.py
