[project]
name = "VideoMerger"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "av>=16.1.0",
    "loguru>=0.7.3",
    "numpy>=2.4.2",
    "pyside6>=6.10.2",
    "scipy>=1.17.1",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "pillow>=12.1.1",
]
