[project]
name = "NeatReel"
version = "0.1.0"
description = "净影连（NeatReel）是一个用于整理、预览和拼接视频的桌面应用。"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "av>=16.1.0",
    "diskcache>=5.6.3",
    "loguru>=0.7.3",
    "numpy>=2.4.2",
    "pillow>=12.1.1",
    "pyside6>=6.10.2",
    "qthreadwithreturn>=1.6.19",
    "scipy>=1.17.1",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
]
